--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="icon" type="image/jpg" href="Fotos/SF.png">
+        <title>SneakerFashion</title>
+        <link href="index.css" rel="stylesheet">
     </head>
-    <body>
-        
-    </body>
 </html>
