Inicio del encabezado

--- a/index.html
+++ b/index.html
@@ -8,4 +8,14 @@
         <title>SneakerFashion</title>
         <link href="index.css" rel="stylesheet">
     </head>
+    <body>
+        <header>
+            <ul class="registro">
+                <li><a href="#">Buscar Tienda&nbsp;&nbsp;| &nbsp;&nbsp;</a></li>
+                <li><a href="#">Ayuda&nbsp;&nbsp;| &nbsp;&nbsp;</a></li>
+                <li><a href="#">Únete&nbsp;&nbsp;| &nbsp;&nbsp;</a></li>
+                <li><a href="#">Iniciar Sesión&nbsp;&nbsp;</a></li>
+            </ul>
+        </header>
+    </body>
 </html>
