inicio del encabezado

--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
                 <li><a href="#">Iniciar Sesión&nbsp;&nbsp;</a></li>
             </ul>
         </header>
+        <div class="header__superior"> 
+        </div>
+        <div class="container__menu">
+            <a href="#">
+                <img class="Usuario" src="Fotos/usuario.png">
+            </a>
+            <a href="#">
+                <img class="Cesta" src="Fotos/compra.png">
+            </a>
+            <div class="search">
+                <input type="search" placeholder="Buscar">
+            </div>
     </body>
 </html>
