Menú del encabezado

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
                 <li><a href="#">Únete&nbsp;&nbsp;| &nbsp;&nbsp;</a></li>
                 <li><a href="#">Iniciar Sesión&nbsp;&nbsp;</a></li>
             </ul>
+            <div>
+                <a href="Index.html">
+                    <img class="Inicio" src="Fotos/SF.png">
+                </a>
+            </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li><a href="#">Nike</a>
+                        </li>
+                        <li><a href="#">Jordan</a>
+                        </li>
+                        <li><a href="#">Adidas</a>
+                        </li>
+                        <li><a href="#">Puma</a>
+                        </li>
+                    </ul> 
+                </nav>
+            </div>
+        </div>
+    <br><br><br><br><br><br>
         </header>
     </body>
 </html>
