--- a/index.html
+++ b/index.html
@@ -29,5 +29,25 @@
             <div class="search">
                 <input type="search" placeholder="Buscar">
             </div>
+            <div>
+                <a href="index.html">
+                    <img class="Inicio" src="Fotos/SF.png">
+                </a>
+            </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li><a href="#">Nike</a>
+                        </li>
+                        <li><a href="#">Jordan</a>
+                        </li>
+                        <li><a href="#">Adidas</a>
+                        </li>
+                        <li><a href="#">Puma</a>
+                        </li>
+                    </ul> 
+                </nav>
+            </div>
+        </div>
     </body>
 </html>
