banner con css hecho

--- a/index.html
+++ b/index.html
@@ -49,5 +49,12 @@
                 </nav>
             </div>
         </div>
+        <br><br><br><br><br><br>
+        <div class="slider-container">  
+            <img class="slider-item" src="Fotos/Leakers.png"/>
+            <img class="slider-item" src="Fotos/Gengar.png"/>
+            <img class="slider-item" src="Fotos/Toallin.png"/>
+          </div> 
+        <br>
     </body>
 </html>
