html y css del pie de pagina

--- a/index.html
+++ b/index.html
@@ -105,4 +105,67 @@
             </div>
         </div>
     </body>
+    <footer class="footer">
+        <div class="container-footer-all">
+            <div class="container-body">
+                <div class="colum1">
+                    <h1>Más información de la compañia</h1>
+                    <p> Con más de 2.500 tiendas en todo el mundo, SneakerFashion es el líder mundial en venta minorista de calzado y ropa deportiva.  Nuestra estrecha colaboración con las marcas más importantes nos empuja a ofrecerte siempre lo mejor y aquí encontrarás la mejor gama de productos.</p>
+                </div>
+                <div class="colum2">
+                    <h1>Redes Sociales</h1>
+                    <div class="row2">
+                        <img src="Fotos/facebook.png">
+                        <label>Facebook</label>
+                    </div>
+                    <div class="row2">
+                        <img src="Fotos/instagram.png">
+                        <label>Instagram</label>
+                    </div>
+                    <div class="row2">
+                        <img src="Fotos/gorjeo.png">
+                        <label>Twitter</label>
+                    </div>
+                    <div class="row2">
+                        <img src="Fotos/spotify.png">
+                        <label>Spotify</label>
+                    </div>
+                    <div class="row2">
+                        <img src="Fotos/youtube.png">
+                        <label>Youtube</label>
+                    </div>
+                    <div class="row2">
+                        <img src="Fotos/tik-tok.png">
+                        <label>TikTok</label>
+                    </div>
+                </div>
+                <div class="colum3">
+                    <h1>Contacto</h1>
+                    <div class="row3">
+                        <img src="Fotos/casa.png">
+                        <label>Calle Antonio Lopez 109-11 l 20-21
+                            Madrid, 28026</label>
+                    </div>
+                    <div class="row3">
+                        <img src="Fotos/telefono.png">
+                        <label>910 59 14 37</label>
+                    </div>
+                    <div class="row3">
+                        <img src="Fotos/correo-electronico.png">
+                        <label>SneakerFashion@gmail.com</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-footer">
+            <div class="footer-footer">
+                <div class="copyright">
+                    © 2022 SneakerFashion.com, Inc. Todos los derechos reservados | <a href="#">SneakerFashion</a>
+                </div>
+                <div class="information">
+                    <a href="Derechos.html">Derechos de Privacidad</a> | <a href="#">Terminos y Condiciones</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </html>
